# mancha

./: .gitignore  AGENTS.md  CONTEXT.md  Croc1_II2_masks.tif  README.md  cellpose_sam.ipynb  handoff-8ezSNY.md  pyproject.toml
docs/adr/: 0001-session-state-in-data-folder.md
sampleData/: Croc1_II10_masks.tif  Croc1_II11_masks.tif  Croc1_II12_masks.tif  Croc1_II14_masks.tif  Croc1_II16_masks.tif  Croc1_II18_masks.tif  Croc1_II19_masks.tif  Croc1_II21_masks.tif  Croc1_II22_masks.tif  Croc1_II23_masks.tif  Croc1_II3_masks.tif  Croc1_II4_masks.tif  Croc1_II5_masks.tif  Croc1_II6_masks.tif  Croc1_II7_masks.tif  Croc1_II8_masks.tif  Croc1_II9_masks.tif
src/mancha/: __main__.py
src/mancha/models/: calibration.py  cell_type.py  csv_export.py  image_pair.py  measurement.py  session.py
src/mancha/utils/: undo.py
src/mancha/widgets/: cell_type_panel.py  image_list.py  main_window.py  viewport.py
tests/: test_cell_type.py  test_cell_type_panel.py  test_csv_export.py  test_image_pair.py  test_integration.py  test_measurement.py  test_session.py  test_undo.py  test_viewport.py
