[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mancha"
version = "0.5.0"
description = "Desktop tool for classifying and measuring cells in microscopy images"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scikit-image",
    "tifffile",
    "PySide6>=6.5",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-qt",
]
